updated readme for sample app

--- a/sampleapp/README
+++ b/sampleapp/README
@@ -1,13 +1,13 @@
 # sampleapp
 
-FIXME: write description
+TDB: write description
 
 ## Usage
 
-FIXME: write
+TBD: write
 
 ## License
 
-Copyright (C) 2012 FIXME
+Copyright (C) 2012 Edward Sumitra
 
-Distributed under the Eclipse Public License, the same as Clojure.
+Distributed under the Eclipse Public License.
